# CORE

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  DISCUSSIONS_WELCOME.md  ENG_README.md  ENG_TECHNICAL_DOCUMENTATION.md  ITEM_INVENTORY_TABLE.md  LICENSE  README.md  README_RU.md  TECHNICAL_DOCUMENTATION.md  run_game.bat  run_test.bat
WIKI/: Core_Game_Design_Document.md  ENG_Game_Design_Document.md  ENG_MVP_Roadmap.md  ENG_README.md  ENG_Technical_Architecture_Document.md  Implementation_Roadmap.md  README.md  Technical_Architecture_Specification.md
WIKI/.obsidian/: workspace.json
assets/shaders/: basic.frag  basic.vert  text.fs
src/: main.cpp  main_simple.cpp
src/core/: engine.cpp  engine.h  input.cpp  input.h  time.cpp  time.h  window.cpp  window.h
src/game/: enemy.cpp  enemy.h  enemy_spawner.cpp  enemy_spawner.h  entity.cpp  entity.h  game.cpp  game.h  inventory_ui.cpp  inventory_ui.h  item.cpp  item.h  item_database.cpp  item_database.h  item_manager.cpp  item_manager.h  projectile.cpp  projectile.h  projectile_manager.cpp  projectile_manager.h  turret.cpp  turret.h  turret_manager.cpp  turret_manager.h  turret_preview.cpp  turret_preview.h  ui_manager.cpp  ui_manager.h  wave_manager.cpp  wave_manager.h
src/graphics/: camera.cpp  camera.h  font.cpp  font.h  mesh.cpp  mesh.h  ray_caster.cpp  ray_caster.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/utils/: debug.cpp  debug.h  math.cpp  math.h
